Shift to FESAPI v2.4.0.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,8 @@ if (WIN32)
 	endif ()
 
 	set_target_properties(${PROJECT_NAME} PROPERTIES
-		PDB_NAME ${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}.${Fetpapi_VERSION}
+		PDB_NAME ${PROJECT_NAME}.${Fetpapi_VERSION}
+		PDB_NAME_DEBUG ${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}.${Fetpapi_VERSION}
 		LINK_FLAGS "/INCREMENTAL:NO /OPT:REF"
 		RUNTIME_OUTPUT_DIRECTORY ${FETPAPI_BINARY_DIR}
 		SUFFIX .${Fetpapi_VERSION}.dll
