--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,28 @@ if (WIN32)
 	if (NOT BUILD_SHARED_LIBS)
 		target_compile_definitions(${PROJECT_NAME} PRIVATE FETPAPI_STATIC)
 	endif ()
+	
+	#FROM https://stackoverflow.com/a/40217291
+    macro(get_WIN32_WINNT version)
+        if(CMAKE_SYSTEM_VERSION)
+            set(ver ${CMAKE_SYSTEM_VERSION})
+            string(REGEX MATCH "^([0-9]+).([0-9])" ver ${ver})
+            string(REGEX MATCH "^([0-9]+)" verMajor ${ver})
+            # Check for Windows 10, b/c we'll need to convert to hex 'A'.
+            if("${verMajor}" MATCHES "10")
+                set(verMajor "A")
+                string(REGEX REPLACE "^([0-9]+)" ${verMajor} ver ${ver})
+            endif()
+            # Remove all remaining '.' characters.
+            string(REPLACE "." "" ver ${ver})
+            # Prepend each digit with a zero.
+            string(REGEX REPLACE "([0-9A-Z])" "0\\1" ver ${ver})
+            set(${version} "0x${ver}")
+        endif()
+    endmacro()
+
+    get_WIN32_WINNT(ver)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE _WIN32_WINNT=${ver})
 endif (WIN32)
 
 # ============================================================================
