--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -1340,11 +1340,59 @@ namespace ETP_NS
 		CoreHandlers(AbstractSession* mySession);
 		virtual ~CoreHandlers();
 		
-		virtual void on_RequestSession(const Energistics::Etp::v12::Protocol::Core::RequestSession & rs, int64_t correlationId);
-	    virtual void on_OpenSession(const Energistics::Etp::v12::Protocol::Core::OpenSession & os, int64_t correlationId);
-	    virtual void on_CloseSession(const Energistics::Etp::v12::Protocol::Core::CloseSession & cs, int64_t correlationId);
-	    virtual void on_ProtocolException(const Energistics::Etp::v12::Protocol::Core::ProtocolException & pe, int64_t correlationId);
-		virtual void on_Acknowledge(const Energistics::Etp::v12::Protocol::Core::Acknowledge & ack, int64_t correlationId);
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+	    virtual void on_RequestSession(const Energistics::Etp::v12::Protocol::Core::RequestSession& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+	    virtual void on_OpenSession(const Energistics::Etp::v12::Protocol::Core::OpenSession& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body whic hhas been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+	    virtual void on_CloseSession(const Energistics::Etp::v12::Protocol::Core::CloseSession& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID (not message ID) of the received exception message.
+		*/
+	    virtual void on_ProtocolException(const Energistics::Etp::v12::Protocol::Core::ProtocolException& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID (not message ID) of the received ackknowledged message.
+		*/
+		virtual void on_Acknowledge(const Energistics::Etp::v12::Protocol::Core::Acknowledge& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+		virtual void on_Ping(const Energistics::Etp::v12::Protocol::Core::Ping& msg, int64_t correlationId);
+		
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+		virtual void on_Pong(const Energistics::Etp::v12::Protocol::Core::Pong& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+		virtual void on_Authorize(const Energistics::Etp::v12::Protocol::Core::Authorize& msg, int64_t correlationId);
+
+		/**
+		* @param msg			The ETP message body which has been received and which is to be processed.
+		* @param correlationId	It is the correlation ID to use if a response is needed to this message. It corresponds to the message ID of the received ETP message.
+		*/
+		virtual void on_AuthorizeResponse(const Energistics::Etp::v12::Protocol::Core::AuthorizeResponse& msg, int64_t correlationId);
 	};
 	
 	class DiscoveryHandlers : public ProtocolHandlers
