Improvement of default Transaction protocol handlers
Allow to start, rollback and commit a transaction from the session using the default Transaction protocol handlers.

--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -1709,9 +1709,43 @@ namespace ETP_NS
 		%template(sendAndBlock) sendAndBlock<Energistics::Etp::v12::Protocol::StoreNotification::SubscribeNotifications>;
 		%template(sendAndBlock) sendAndBlock<Energistics::Etp::v12::Protocol::StoreNotification::UnsolicitedStoreNotifications>;
 		
+		/**
+		* Check if the ETP session (starting after the Core.OpenSession or Core.RequestSession message) is not opened yet or has been closed.
+		*/
 		bool isEtpSessionClosed() const;
+		
+		/**
+		* Check wether a particular ETP message has been responded or not by the other agent.
+		*/
 		bool isMessageStillProcessing(int64_t msgId) const;
+		
+		/**
+		* Wait for all sent messages to be responded and then close the websocket connection
+		*/
 		void close();
+
+		/**
+		* A customer sends to a store to begin a transaction.
+		* This function should be used with caution if Transaction Handlers have been overidden.
+		*
+		* @param dataspaceUris  Indicates the dataspaces involved in the transaction. An empty STRING means the default dataspace. An empty LIST means all dataspaces.
+		* @param readOnly		Indicates that the request in the transaction is read-only (i.e., "get" messages). 
+		*/
+		std::string startTransaction(std::vector<std::string> dataspaceUris = {}, bool readOnly = false);
+
+		/**
+		* A customer sends to a store to commit and end a transaction. This message implies that the customer 
+		* has received from or sent to the store all the data required for some purpose. The customer asserts that 
+		* the data sent in the scope of this transaction is a consistent unit of work.
+		*/
+		std::string rollbackTransaction();
+
+		/*
+		* A customer sends to a store to cancel a transaction. The store MUST disregard any requests or data sent 
+		* with that transaction. The current transaction (the one being canceled) MUST NOT change the state of 
+		* the store.
+		*/
+		std::string commitTransaction();
 	};
 
 	namespace EtpHelpers {
