--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -1710,14 +1710,13 @@ namespace ETP_NS
 		%template(sendAndBlock) sendAndBlock<Energistics::Etp::v12::Protocol::StoreNotification::UnsolicitedStoreNotifications>;
 		
 		/**
-		* Check if the ETP session (starting after the Core.OpenSession or Core.RequestSession message) is not opened yet or has been closed.
-		*/
-		bool isEtpSessionClosed() const;
-		
-		/**
 		* Check wether a particular ETP message has been responded or not by the other agent.
 		*/
 		bool isMessageStillProcessing(int64_t msgId) const;
+		
+		/****************
+		***** CORE ******
+		****************/
 		
 		/**
 		* Wait for all sent messages to be responded and then close the websocket connection
@@ -1725,8 +1724,132 @@ namespace ETP_NS
 		void close();
 
 		/**
+		* Check if the ETP session (starting after the Core.OpenSession or Core.RequestSession message) is not opened yet or has been closed.
+		*/
+		bool isEtpSessionClosed() const;
+
+		std::map<std::string, Energistics::Etp::v12::Datatypes::ErrorInfo> getProtocolExceptions();
+
+		/****************
+		*** DATASPACE ***
+		****************/
+
+		/**
+		* A customer sends to a store to discover all dataspaces available on the store.
+		* This function should be used with caution if Dataspace Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param storeLastWriteFilter	An optional filter to limit the dataspaces returned by date/time last saved to the store.
+		*								The store returns a list of dataspaces whose last changed date/time is greater than the specified date/time.
+		*								It must be a UTC dateTime value, serialized as a positive long, using the Avro logical type timestamp-micros (microseconds from the Unix Epoch, 1 January 1970 00:00:00.000000 UTC).
+		* @param return	The available dataspaces the store could return.
+		*/
+		std::vector<Energistics::Etp::v12::Datatypes::Object::Dataspace> getDataspaces(int64_t storeLastWriteFilter = -1);
+
+		/**
+		* A customer sends to a store to create one or more dataspaces.
+		* This function should be used with caution if Dataspace Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param dataspaces  ETP general map : One each for each dataspace the customer wants to add or update.
+		* @param return	The map keys corresponding to the dataspaces which have been put successfully into the store.
+		*/
+		std::vector<std::string> putDataspaces(const std::map<std::string, Energistics::Etp::v12::Datatypes::Object::Dataspace>& dataspaces);
+
+		/**
+		* A customer sends to a store to delete one or more dataspaces.
+		* This function should be used with caution if Dataspace Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param dataspaceUris  ETP general map where the values must be the URIs for the dataspaces the customer wants to delete.
+		* @param return	The map keys corresponding to the dataspaces which have been deleted successfully.
+		*/
+		std::vector<std::string> deleteDataspaces(const std::map<std::string, std::string>& dataspaceUris);
+
+		/****************
+		*** DISCOVERY ***
+		****************/
+
+		/**
+		* A Customer sends this message to a store to discover data objects in the store.
+		* This function should be used with caution if Discovery Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param context				Includes the URI of the dataspace or data object to begin the discovery, what specific types of data objects are of interest,
+		*								and how many "levels" of relationships in the model to discover, among others. 
+		* @param scope					Scope is specified in reference to the URI (which is entered in the context field).
+		*								It indicates which direction in the graph that the operation should proceed (targets or sources) and whether or not to include the starting point (self).
+		* @param storeLastWriteFilter	An optional filter to filter the discovery on a date when the data object was last written in a particular store.
+		*								The store returns resources whose storeLastWrite date/time is GREATER than the date/time specified in this filter field.
+		*								It must be a UTC dateTime value, serialized as a positive long, using the Avro logical type timestamp-micros (microseconds from the Unix Epoch, 1 January 1970 00:00:00.000000 UTC).
+		* @param countObjects			If true, the store provides counts of sources and targets for each resource identified by Discovery.
+		* @param return					The resources corresponding to this query.
+		*/
+		std::vector<Energistics::Etp::v12::Datatypes::Object::Resource> getResources(
+			const Energistics::Etp::v12::Datatypes::Object::ContextInfo& context,
+			const Energistics::Etp::v12::Datatypes::Object::ContextScopeKind& scope,
+			int64_t storeLastWriteFilter = -1,
+			bool countObjects = false);
+
+		/**
+		* A customer sends to a store to discover data objects that have been deleted (which are sometimes called "tombstones").
+		* This function should be used with caution if Discovery Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param dataspaceUri			The URI of the dataspace where the objects were deleted.
+		* @param deleteTimeFilter		An optional filter to filter the discovery on a date when the data object was deleted in a particular store.
+		*								The store returns resources for objects whose delete times are greater than this value.
+		*								It must be a UTC dateTime value, serialized as a positive long, using the Avro logical type timestamp-micros (microseconds from the Unix Epoch, 1 January 1970 00:00:00.000000 UTC).
+		* @param dataObjectTypes		Filter for the types of data objects you want. EXAMPLES: "witsml20.Well", "resqml20.obj_TectonicBoundaryFeature", "resqml20.*" 
+		* @param return					The deleted resources corresponding to this query.
+		*/
+		std::vector<Energistics::Etp::v12::Datatypes::Object::DeletedResource> getDeletedResources(
+			const std::string& dataspaceUri,
+			int64_t deleteTimeFilter = -1,
+			const std::vector<std::string>& dataObjectTypes = {});
+
+		/****************
+		***** STORE *****
+		****************/
+
+		/**
+		* A customer sends to a store to get one or more data objects, each identified by a URI.
+		* This function should be used with caution if Store Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param uris	ETP general map where the values MUST be the URIs of a data object to be retrieved.
+		* @param return	The received dataobjects in a map where the key makes the link between the asked uris and the received dataobjects.
+		*/
+		std::map<std::string, Energistics::Etp::v12::Datatypes::Object::DataObject> getDataObjects(const std::map<std::string, std::string>& uris);
+
+		/**
+		* A customer sends to a store to add or update one or more data objects.
+		* This function should be used with caution if Store Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param uris	ETP general map where the values MUST be the data for each data object in the request, including each one's URI.
+		* @param return	The map keys corresponding to the dataObjects which have been put successfully.
+		*/
+		std::vector<std::string> putDataObjects(const std::map<std::string, Energistics::Etp::v12::Datatypes::Object::DataObject>& dataObjects);
+
+		/**
+		* A customer sends to a store to delete one or more data objects from the store.  
+		* This function should be used with caution if Store Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
+		*
+		* @param uris	ETP general map where the values MUST be the URIs of a data object to be deleted.
+		* @param return	The map keys corresponding to the dataObjects which have been deleted successfully.
+		*/
+		std::vector<std::string> deleteDataObjects(const std::map<std::string, std::string>& uris);
+
+		/****************
+		** TRANSACTION **
+		****************/
+
+		/**
 		* A customer sends to a store to begin a transaction.
 		* This function should be used with caution if Transaction Handlers have been overidden.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
 		*
 		* @param dataspaceUris  Indicates the dataspaces involved in the transaction. An empty STRING means the default dataspace. An empty LIST means all dataspaces.
 		* @param readOnly		Indicates that the request in the transaction is read-only (i.e., "get" messages). 
@@ -1737,6 +1860,7 @@ namespace ETP_NS
 		* A customer sends to a store to commit and end a transaction. This message implies that the customer 
 		* has received from or sent to the store all the data required for some purpose. The customer asserts that 
 		* the data sent in the scope of this transaction is a consistent unit of work.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
 		*/
 		std::string rollbackTransaction();
 
@@ -1744,6 +1868,7 @@ namespace ETP_NS
 		* A customer sends to a store to cancel a transaction. The store MUST disregard any requests or data sent 
 		* with that transaction. The current transaction (the one being canceled) MUST NOT change the state of 
 		* the store.
+		* It actually sends a message and block the current thread untill a response has been received from the store.
 		*/
 		std::string commitTransaction();
 	};
