--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -1955,11 +1955,11 @@ namespace ETP_NS
 	namespace ClientSessionLaunchers
 	{
 		std::shared_ptr<ETP_NS::PlainClientSession> createWsClientSession(InitializationParameters* initializationParams, const std::string & target, const std::string & authorization,
-			std::size_t preferredMaxFrameSize = 4096);
+			const std::map<std::string, std::string>& additionalHandshakeHeaderFields = {}, std::size_t preferredMaxFrameSize = 4096);
 
 #ifdef WITH_ETP_SSL
 		std::shared_ptr<ETP_NS::SslClientSession> createWssClientSession(InitializationParameters* initializationParams, const std::string & target, const std::string & authorization,
-			std::size_t preferredMaxFrameSize = 4096, const std::string & additionalCertificates = "");
+			const std::map<std::string, std::string>& additionalHandshakeHeaderFields = {}, std::size_t preferredMaxFrameSize = 4096, const std::string & additionalCertificates = "");
 #endif
 	}
 	
