--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -1935,8 +1935,8 @@ namespace ETP_NS
 	class InitializationParameters
 	{
 	public:
-		InitializationParameters(const std::string& instanceUuid, const std::string & etpUrl)
-		InitializationParameters(const std::string & instanceUuid, const std::string & host, unsigned short port, const std::string & urlPath = "");
+		InitializationParameters(const std::string& instanceUuid, const std::string & etpUrl);
+		InitializationParameters(const std::string& instanceUuid, const std::string & host, unsigned short port, const std::string & urlPath = "");
 		virtual ~InitializationParameters();
 
 		void setMaxWebSocketMessagePayloadSize(int64_t value);
