--- a/cmake/swigEtp1_2Include.i.in
+++ b/cmake/swigEtp1_2Include.i.in
@@ -2019,6 +2019,8 @@ namespace ETP_NS
 #endif
 }
 
+#ifdef WITH_FESAPI
 %pragma(java) moduleimports="import com.f2i_consulting.fesapi.common.AbstractObject;"
 %pragma(java) jniclassimports="import com.f2i_consulting.fesapi.common.AbstractObject;"
 %pragma(csharp) moduleimports="using F2iConsulting.Fesapi.common;"
+#endif
