Add doxygen generation in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,6 +282,8 @@ if (WIN32)
 	endif (WITH_FESAPI)
 endif (WIN32)
 
+add_subdirectory(doc)
+
 # ============================================================================
 # Install Fetpapi library
 # ============================================================================
